--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -2,7 +2,7 @@
 target = "x86_64-neutrino_os.json"
 
 [unstable]
-build-std = ["core", "compiler_builtins"]
+build-std = ["core", "compiler_builtins", "alloc"]
 build-std-features = ["compiler-builtins-mem"]
 
 [target.'cfg(target_os = "none")']
