--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -13,18 +13,52 @@ panic = "abort"
 panic = "unwind"
 
 [dependencies]
-bootloader = "0.9.6"
 spin = "0.5.2"
 x86_64 = "0.14.10"
 uart_16550 = "0.2.18"
 pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
+executor = "0.8.4"
+
+[dependencies.bootloader]
+version = "0.9.6"
+features = ["map_physical_memory"]
+
+[dependencies.slab_allocator_rs]
+version = "1.0.1"
+optional = true
+
+[dependencies.linked_list_allocator]
+version = "0.10.1"
+optional = true
 
 [dependencies.lazy_static]
 version = "1.0"
 features = ["spin_no_std"]
 
+[dependencies.crossbeam-queue]
+version = "0.2.1"
+default-features = false
+features = ["alloc"]
+
+[dependencies.conquer-once]
+version = "0.2.0"
+default-features = false
+
+[dependencies.futures-util]
+version = "0.3.4"
+default-features = false
+features = ["alloc"]
+
 [package.metadata.bootimage]
+run-args = ["-serial", "stdio", "-d", "int", "-s", "-S"]
+#run-args = ["-serial", "stdio", "-d", "int"]
+#run-args = ["-serial", "stdio"]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
 test-success-exit-code = 33
 test-timeout = 300
+
+[features]
+default = ["slab_allocator"]
+slab_allocator = ["dep:slab_allocator_rs"]
+linked_list_allocator = ["dep:linked_list_allocator"]
