--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -21,13 +21,10 @@ pic8259 = "0.10.1"
 pc-keyboard = "0.5.0"
 executor = "0.8.4"
 enum-iterator = "1.1.3"
+slab_allocator_rs = "1.0.1"
 
 [dependencies.infinity]
 path = "../infinity"
-
-[dependencies.slab_allocator_rs]
-version = "1.0.1"
-optional = true
 
 [dependencies.linked_list_allocator]
 version = "0.10.1"
@@ -58,8 +55,3 @@ default-features = false
 [package.metadata.bootloader]
 map-physical-memory = true
 physical-memory-offset = "0x0000_4000_0000_0000"
-
-[features]
-default = ["slab_allocator"]
-slab_allocator = ["dep:slab_allocator_rs"]
-linked_list_allocator = ["dep:linked_list_allocator"]
