--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -22,6 +22,7 @@ pc-keyboard = "0.5.0"
 executor = "0.8.4"
 enum-iterator = "1.1.3"
 slab_allocator_rs = "1.0.1"
+modular-bitfield = "0.11.2"
 
 [dependencies.infinity]
 path = "../infinity"
