--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -23,6 +23,8 @@ executor = "0.8.4"
 enum-iterator = "1.1.3"
 slab_allocator_rs = "1.0.1"
 modular-bitfield = "0.11.2"
+raw-cpuid = "10.6.0"
+num-derive = "0.3.3"
 
 [dependencies.infinity]
 path = "../infinity"
@@ -51,6 +53,10 @@ features = ["alloc"]
 
 [dependencies.font8x8]
 version = "0.3.1"
+default-features = false
+
+[dependencies.num-traits]
+version = "0.2.15"
 default-features = false
 
 [package.metadata.bootloader]
