--- a/kernel/.cargo/config.toml
+++ b/kernel/.cargo/config.toml
@@ -1,5 +1,5 @@
 [build]
-target = "../targets/x86_64-neutrino_os.json"
+target = "../targets/x86_64-adenos.json"
 
 [unstable]
 build-std = ["core", "compiler_builtins", "alloc"]
