--- a/infinity/Cargo.toml
+++ b/infinity/Cargo.toml
@@ -5,7 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-
 [lib]
 name = "infinity"
+
+[features]
+kernel_mode = []
+
+[dependencies]
+num-derive = "0.3.3"
+slab_allocator_rs = "1.0.1"
+
+[dependencies.num-traits]
+version = "0.2.15"
+default-features = false
