--- a/adenos/infinity/Cargo.toml
+++ b/adenos/infinity/Cargo.toml
@@ -13,9 +13,11 @@ kernel_mode = []
 
 [dependencies]
 num-derive = "0.3.3"
-slab_allocator_rs = "1.0.1"
 enum-iterator = "1.1.3"
 bitflags = "1.2.1"
+
+[dependencies.slab_allocator]
+path = "../slab_allocator"
 
 [dependencies.num-traits]
 version = "0.2.15"
